# LifeGame

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
src/: board.cpp  board.h
test/: test.cpp
test/input_files/: bad_char.txt  bad_length.txt  expanding_glider.txt  glider.txt
